Implementa persistencia de dados com Sequelize e PostgreSQL
